# mug

./: .gitignore  LICENSE  README.md  meson.build
include/mug/: mug.h  mug.h.orig
include/mug/core/: handler.h  mug_context.h
include/mug/types/: mug_body.h  mug_continuation_invocation.h  mug_continuation_result.h  mug_headers.h  mug_http_continuation_invocation.h  mug_http_continuation_result.h  mug_http_request.h  mug_http_response.h  mug_invocation.h  mug_request_invocation.h  mug_response_result.h  mug_result.h
include/mug/types/invocation/: __mug_continuation_invocation.h  __mug_invocation.h  mug_continuation_invocation.h  mug_http_continuation_invocation.h  mug_invocation.h  mug_invocation_type.h  mug_request_invocation.h
include/mug/types/misc/: mug_body.h  mug_headers.h  mug_http_method.h  mug_http_request.h  mug_http_response.h  mug_http_status_code.h  mug_http_version.h  mug_save_bag.h
include/mug/types/result/: __mug_continuation_result.h  __mug_result.h  mug_continuation_result.h  mug_http_continuation_result.h  mug_response_result.h  mug_result.h  mug_result_type.h
src/: array.c  array.h  event_ctx.c  event_ctx.h  event_dispatcher.c  event_dispatcher.h  event_handler.c  event_handler.h  event_service.c  event_service.h  event_source_map.c  event_source_map.h  http_parser.c  io_event.c  io_event.h  io_fs_event.c  io_fs_event.h  io_http_event.c  io_request_event.c  io_request_event.h  io_sync_event.c  list.c  list.h  mug.c  route.c  route.h  routing_table.c  routing_table.h  thread_pool.c  thread_pool.h  work_queue.c  work_queue.h
src/core/: mug_context.c
src/event/: __event.h  __external_event.h  __internal_event.h  epoll_event_ctx.c  event.c  event.h  event_ctx.c  event_ctx.h  event_type.h  external_event.c  external_event.h  http_request_event.c  http_request_event.h  http_response_event.c  http_response_event.h  internal_event.c  internal_event.h  new_connection_event.c  new_connection_event.h  request_completed_event.c  request_completed_event.h
src/event_context/: __event_context.h  context_event.h  context_event_type.h  epoll_event_context.c  epoll_event_context.h  event_context.c  event_context.h
src/event_handler/: event_handler.c  event_handler.h  new_connection.c  new_connection.h  request_completed.c
src/event_orig/: epoll_event_ctx.c  epoll_event_ctx.h  event.h
src/event_source/: __event_source.h  event_source.c  event_source.h  http_respone_event_source.h  http_response_event_source.c  http_response_event_source.h  internal_event_source.c  internal_event_source.h  listen_sock_event_source.c  listen_sock_event_source.h
src/http/: buffer.c  buffer.h  http_parser.c  http_parser.h  http_response_writer.c  http_response_writer.h  request_parser.c  request_parser.h
src/io_event/: io_event.c  io_event.h  io_event_map.c  io_event_map.h  io_fs_event.c  io_http_event.c  io_http_event.h  io_request_event.c  io_request_event.h  io_sync_event.c  io_sync_event.h
src/task_executor/: __i_task_executor.h  i_task_executor.c  i_task_executor.h  pool_worker.c  pool_worker.h  task_executor.c  task_executor.h  task_executor_state.h  task_func.h  work_item.h  work_queue.c  work_queue.h
src/types/invocation/: mug_continuation_invocation.c  mug_http_continuation_invocation.c  mug_invocation.c  mug_request_invocation.c
src/types/misc/: mug_body.c  mug_headers.c  mug_http_request.c  mug_http_response.c  mug_save_bag.c
src/types/result/: mug_continuation_result.c  mug_http_continuation_result.c  mug_response_result.c  mug_result.c
test/: array.c  event_dispatcher.c  event_service.c  list.c  meson.build  routing_table.c  work_queue.c
test/app/: meson.build
test/app/sample/: meson.build  sample.c
test/event_handler/: meson.build
test/event_source/: internal_event_source.c  listen_sock_event_source.c  meson.build
test/http/: buffer.c  meson.build
test/serve/: meson.build  test_serve.c
test/task_executor/: meson.build  task_executor.c  work_queue.c
test/types/misc/: meson.build  mug_body.c  mug_save_bag.c
test/unit/: event_source_map.c  meson.build
test/unit/event_handler/: new_connection.c
test/unit/event_source/: http_response_event_source.c
test/unit/http/: meson.build  request_parser.c
test/unit/types/: meson.build
test/unit/types/misc/: meson.build  mug_headers.c
